feature: Full OpenApi spec

--- a/bin/nanocld/swagger-ui/index.html
+++ b/bin/nanocld/swagger-ui/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Nanocl Explorer</title>
+    <title>Nanocl Daemon Explorer</title>
     <link rel="stylesheet" type="text/css" href="/explorer/swagger-ui.css" />
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="/explorer/index.css" />
     <link rel="icon" type="image/png" href="/explorer/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/explorer/favicon-16x16.png" sizes="16x16" />
   </head>
